--- a/FPTBookStore/FPTBookStore.csproj
+++ b/FPTBookStore/FPTBookStore.csproj
@@ -237,6 +237,7 @@
     <Content Include="Views\Category\Edit.cshtml" />
     <Content Include="Views\Book\Create.cshtml" />
     <Content Include="Views\Book\Edit.cshtml" />
+    <Content Include="Views\Cart\Order.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
