--- a/FPTBookStore/FPTBookStore.csproj
+++ b/FPTBookStore/FPTBookStore.csproj
@@ -242,6 +242,7 @@
     <Content Include="Views\Admin\Report.cshtml" />
     <Content Include="Views\History\Index.cshtml" />
     <Content Include="Views\History\Details.cshtml" />
+    <Content Include="Views\Home\ChangePassword.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
